aligned sub-headings left, fixed footer

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ h6 {
 	color: #111111;
 	font-weight: 400;
 	font-family: "Work Sans", sans-serif;
+	text-align: left;
 }
 
 h1 {
@@ -2768,8 +2769,5 @@ ul li, ol li {
 .site-header,
 .header,
 .navbar {
-  background-color: white !important;
+	background-color: white !important;
 }
-
-
-
